--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
   text-align: center;
 }
 
+.black-nav {
+  display: flex;
+  background-color: indianred;
+  width: 100%;
+  color: antiquewhite;
+  padding-left: 40px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
